data/derived/comb/progs/unify/prog3433.ml.out
Characters 76-79:
  | Sine s -> Format.sprintf "%d" (sin (3.0 * 2.0));;
                                        ^^^
Error: This expression has type float but an expression was expected of type
         int
